# VirtualiZarr

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  citation.cff  conftest.py  mkdocs.yml  noaa-cdr-sst.ipynb  pyproject.toml  safetensors_examples.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: docs_preview.yml  main.yml  min-deps.yml  minimum-versions.yml  release.yml  typing.yml  upstream.yml
ci/: doc.yml  environment.yml  min-deps.yml  upstream-overrides.txt  upstream.yml
design_notes/: roadmap.md  v2.md
docs/: .gitignore  Makefile  api.md  api.rst  conf.py  contributing.md  core_team_guide.md  custom_parsers.md  custom_readers.md  data_structures.md  dev_status_roadmap.md  examples.md  faq.md  how_it_works.md  index.ipynb  index.md  inlined_references.md  installation.md  migration_guide.md  releases.md  releases.rst  safetensors.md  scaling.md  usage.ipynb  usage.md
docs/_static/: custom.css
docs/about/: contributing.md  core_team_guide.md  releases.md
docs/api/: developer.md  parsers.md  serialization.md  virtualizarr.md
docs/api/parsers/: dmrpp.md  fits.md  grib.md  hdf4.md  hdf5.md  icechunk.md  kerchunk.md  netcdf3.md  protocol.md  tiff.md  zarr.md
docs/explanation/: custom_parsers.md  data_structures.md  faq.md  scaling.md
docs/getting_started/: installation.md
docs/how_to/: examples.md  scaling.md  usage.md  validation.md
docs/overrides/stylesheets/: extra.css
docs/paper/: paper.bib  paper.md
examples/: atl03.ipynb
examples/V1/append/: noaa-cdr-sst.ipynb
examples/V1/coiled/: terraclimate.ipynb
examples/V1/mursst-icechunk-with-lithops/: README.md  cli.py  config.py  lithops.yaml  main.py  models.py  url_utils.py
examples/V1/oae/: Dockerfile  README.md
examples/V1/virtualizarr-with-lithops/: README.md  virtualizarr-with-lithops.py
examples/V2/: README.md  goes-16-ingest.ipynb  goes_basic.py  goes_with_caching_stores.py  its_live.ipynb
examples/V2/append/: noaa-cdr-sst.ipynb
examples/V2/ccmp/: .gitignore  README.md  produce_icechunk.ipynb  pyproject.toml  read_icechunk.ipynb
examples/V2/coiled/: terraclimate.ipynb
examples/append/: noaa-cdr-sst.ipynb
examples/coiled/: terraclimate.ipynb
examples/mursst-icechunk-with-lithops/: Dockerfile  README.md  __init__.py  cli.py  config.py  data_processing.py  helpers.py  lithops-env.yml  lithops.yaml  lithops_functions.py  lithops_wrappers.py  main.py  repo.py  requirements.txt  test_lithops.py  virtual_datasets.py  zarr_operations.py
examples/mursst-icechunk-with-lithops/ec2_for_lithops_runtime/: 00-create-security-group.sh  01-launch-ec2.sh  03-setup-ec2.sh  README.md
examples/mursst-icechunk-with-lithops/lithops_package/: __init__.py  cli.py  config.py  data_processing.py  lithops_wrappers.py  repo.py  url_utils.py  virtual_datasets.py  zarr_operations.py
examples/oae/: Dockerfile  README.md  mvp.ipynb  oae_refs_at_scale.ipynb
examples/rechunking/: Dockerfile_virtualizarr  README.md  cubed-rechunk.py  requirements.txt
examples/virtualizarr-with-lithops/: README.md  requirements.txt  virtual-rechunk.py  virtualizarr-with-lithops.py
virtualizarr/: __init__.py  accessor.py  backend.py  codecs.py  common.py  dmrpp.py  kerchunk.py  manifest.py  parallel.py  registry.py  store.py  testing.py  types.py  utils.py  xarray.py  zarr.py
virtualizarr/.github/workflows/: main.yml
virtualizarr/backends/: __init__.py  api.py  common.py  dmrpp.py  fits.py  kerchunk.py  netcdf3.py  tiff.py  zarr.py
virtualizarr/backends/hdf/: __init__.py  filters.py  hdf.py
virtualizarr/ci/: environment.yml
virtualizarr/manifests/: __init__.py  array.py  array_api.py  get_codecs.py  group.py  indexing.py  manifest.py  registry.py  reindex.py  store.py  utils.py
virtualizarr/parsers/: __init__.py  dmrpp.py  fits.py  hdf4.py  icechunk.py  kerchunk.py  kerchunk_json.py  kerchunk_parquet.py  netcdf3.py  tiff.py  typing.py  utils.py  zarr.py
virtualizarr/parsers/hdf/: __init__.py  filters.py  hdf.py
virtualizarr/parsers/icechunk/: __init__.py  obstore_utils.py  parser.py
virtualizarr/parsers/kerchunk/: json.py  parquet.py  translator.py
virtualizarr/readers/: __init__.py  api.py  common.py  dmrpp.py  fits.py  hdf.py  hdf5.py  hdf_filters.py  kerchunk.py  netcdf3.py  safetensors.py  tiff.py  zarr.py  zarrV2V3.py  zarr_v3.py
virtualizarr/readers/hdf/: __init__.py  filters.py  hdf.py
virtualizarr/storage/: _obstore.py  common.py  obstore.py
virtualizarr/testing/: utils.py
virtualizarr/tests/: __init__.py  conftest.py  test_align.py  test_api.py  test_backend.py  test_backends.py  test_codecs.py  test_integration.py  test_kerchunk.py  test_manifest.py  test_native_align.py  test_parallel.py  test_registry.py  test_utils.py  test_xarray.py  test_zarr.py  utils.py
virtualizarr/tests/data/: daymet_v4_swe_annavg_hi_2023.tif  ecmwf_soil_8vars_tiny.grib1  test_ds_netcdf3.nc  test_ds_netcdf4_full_time.nc  test_ds_netcdf4_group.nc  test_ds_netcdf4_split_time1.nc  test_ds_netcdf4_split_time2.nc  test_ds_non_datetime_time.nc
virtualizarr/tests/test_manifests/: test_array.py  test_group.py  test_manifest.py  test_reindex.py  test_store.py  test_store_get_many.py
virtualizarr/tests/test_parsers/: _fill_value_common.py  conftest.py  test_dmrpp.py  test_fits.py  test_grib.py  test_hdf4.py  test_icechunk.py  test_kerchunk.py  test_netcdf3.py  test_tiff.py  test_zarr.py  test_zarr_fill_value_equivalence.py  test_zarr_spec_compliance.py
virtualizarr/tests/test_readers/: conftest.py  test_dmrpp.py  test_fits.py  test_hdf.py  test_hdf_filters.py  test_hdf_integration.py  test_kerchunk.py  test_netcdf3.py  test_safetensors.py  test_tiff.py  test_zarr.py
virtualizarr/tests/test_remote_integration/: conftest.py  test_remote_icechunk.py
virtualizarr/tests/test_stores/: test_manifest_store.py
virtualizarr/translators/: kerchunk.py
virtualizarr/types/: __init__.py  general.py  kerchunk.py
virtualizarr/v2/: api.py  protocols.py
virtualizarr/writers/: arrow.py  icechunk.py  kerchunk.py  zarr.py
(+21 files in other folders)
